Support null arguments in CodeBlock
See gh-1842

Signed-off-by: sijun-yang <yangsijun5528@gmail.com>